--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,34 @@
 
-.centred-container {
+@font-face {
+    font-family: 'Nunito', sans-serif;
+}
+
+p, div {
+    font-family: 'Nunito', sans-serif;
+    font-size: large;
+    
+}
+
+.navbar-custom {
+    background-color: rgb(245,242,242);
+    font-family: 'Nunito', sans-serif;
+    margin-bottom: 2em;
+}
+
+.banner {
+    text-align: center;
+    margin-bottom: 5em;
+}
+
+.description {
     text-align: center;
 }
 
-.story {
-    width: 900px;
-    height: 600px;
+.para-top {
+    margin: 0;
 }
+
+.para-last {
+    margin-bottom: 5em;
+}
+
