--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: 'Nunito', sans-serif;
-    src: "https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap";
+    src: url(https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap) ;
 }
 
 p, div {
